<resources>
    <string name="app_name">Taskmaster</string>
    <string name="add_tasks">add tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks">Total Tasks: 0</string>
    <string name="my_task">My Task</string>
    <string name="finish_code_challenge">Finish Code Challenge</string>
    <string name="finish_lab">Finish Lab</string>
    <string name="todo">TODO</string>
    <string name="practice_whiteboarding">Practice whiteboarding</string>
    <string name="settings">Settings</string>
    <string name="team_selection">Please select your team below</string>
    <string name="save">save</string>
    <string name="username_input">username</string>
    <string name="username">username</string>
</resources>
